more work, more learning python

--- a/go.ipynb
+++ b/go.ipynb
@@ -10,7 +10,7 @@
    "source": [
     "# Genetic Optimization\n",
     "## ML Forum \n",
-    "### Taylor Hogan 5-12-17"
+    "### Taylor Hogan Dec-5-17"
    ]
   },
   {
@@ -31,13 +31,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Inline-style: \n",
-    "![alt text](https://goo.gl/images/T1H5cE \"Logo Title Text 1\")\n"
+    "\n",
+    "![alt text](Genetic-Algorithm-Tree-Basic-steps-of-GA-selection-crossover-and-mutation.jpg \"Logo Title Text 1\")\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 133,
    "metadata": {
     "collapsed": true
    },
@@ -62,13 +64,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 134,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def clone (individual : list):\n",
+    "def clone (individual : list) -> list :\n",
     "    clone = []\n",
     "    for i in range (len (individual)):\n",
     "        clone.append (individual[i])\n",
@@ -77,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 135,
    "metadata": {
     "collapsed": true,
     "slideshow": {
@@ -106,22 +108,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 136,
    "metadata": {
-    "collapsed": true,
     "slideshow": {
      "slide_type": "slide"
     }
    },
    "outputs": [],
    "source": [
-    "def fitness (individual) -> float:\n",
-    "    return 1\n"
+    "def fitness (individual : list) -> float:\n",
+    "    fitness = 0\n",
+    "    size = len (individual)\n",
+    "    if (size <= 1):\n",
+    "        return 1.0\n",
+    "    for ith in range (size -1):\n",
+    "        if (individual[ith] < individual[ith+1]):\n",
+    "            fitness += 1\n",
+    "    return (fitness / (size-1))\n",
+    "    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 137,
    "metadata": {
     "collapsed": true,
     "slideshow": {
@@ -130,20 +139,20 @@
    },
    "outputs": [],
    "source": [
+    "\n",
     "def evolveOneGeneration (population :list )-> list :\n",
     "    nextGeneration = []\n",
-    "    nextGeneration = list (map (mutate, population))\n",
-    "    print (nextGeneration)\n",
-    "    return nextGeneration.append (population)\n",
-    "        #for individual in nextGeneration:\n",
-    "         #   setFitness (individual, fitness (individual))\n",
+    "    nextGeneration =   list(map (mutate, population))\n",
+    "   \n",
+    "    population.extend (nextGeneration)\n",
+    "    return population\n",
     "            \n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 138,
    "metadata": {
     "collapsed": true
    },
@@ -163,16 +172,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "e [12, 17, 18, 0, 6, 15, 18, 5, 14, 1, 12, 19, 14, 0, 5, 10, 17, 9, 11, 14]\n",
-      "[[12, 17, 18, 0, 6, 15, 18, 5, 14, 1, 12, 11, 14, 0, 5, 10, 17, 9, 19, 14]]\n",
-      "f None\n"
+      "f [[15, 7, 8, 3, 2, 15, 13, 5, 11, 15, 4, 1, 13, 19, 13, 19, 19, 4, 9, 17], [15, 7, 8, 3, 2, 15, 13, 5, 11, 15, 4, 1, 9, 19, 13, 19, 19, 4, 13, 17]]\n"
      ]
     }
    ],
@@ -185,21 +192,29 @@
     "for i in range (populationSize-1):\n",
     "    population.append (mutate (population[i], 100))\n",
     "\n",
-    "for individual in population:\n",
-    "    print (\"e\", individual)\n",
-    "    \n",
+    "\n",
     "print (\"f\", evolveOneGeneration (population))\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 141,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.6666666666666666\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (fitness ([1,2,3,2]))\n",
+    "    \n",
+    "    "
+   ]
   },
   {
    "cell_type": "code",
