--- a/go.ipynb
+++ b/go.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 45,
    "metadata": {
     "collapsed": true
    },
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 46,
    "metadata": {
     "collapsed": true
    },
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 47,
    "metadata": {
     "collapsed": true,
     "slideshow": {
@@ -91,7 +91,7 @@
     "import random\n",
     "from typing import List\n",
     "\n",
-    "def mutate (individual : list, times : int = 1) -> list:\n",
+    "def mutate2 (individual : list, times : int = 1) -> list:\n",
     "    mutant = clone (individual)\n",
     "    size = len (individual)\n",
     "    for i in range (times):       \n",
@@ -108,8 +108,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 48,
    "metadata": {
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "from typing import List\n",
+    "\n",
+    "def mutate1 (individual : list, times : int = 1) -> list:\n",
+    "    mutant = clone (individual)\n",
+    "    size = len (individual)\n",
+    "    for i in range (times):       \n",
+    "        ith = random.randint (0, size-1)\n",
+    "        jth = random.randint (0, size-1)\n",
+    "        tmp = mutant[ith]\n",
+    "        del(mutant[ith]);\n",
+    "        mutant.insert (jth, tmp)\n",
+    "        \n",
+    "    return mutant\n",
+    "    \n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -122,15 +153,17 @@
     "    if (size <= 1):\n",
     "        return 1.0\n",
     "    for ith in range (size -1):\n",
-    "        if (individual[ith] < individual[ith+1]):\n",
+    "        if (individual[ith] <= individual[ith+1]):\n",
     "            fitness += 1\n",
+    "        else :\n",
+    "            break\n",
     "    return (fitness / (size-1))\n",
     "    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 50,
    "metadata": {
     "collapsed": true,
     "slideshow": {
@@ -141,10 +174,10 @@
    "source": [
     "\n",
     "def evolveOneGeneration (population :list )-> list :\n",
-    "    nextGeneration = []\n",
-    "    nextGeneration =   list(map (mutate, population))\n",
-    "   \n",
+    "    mF = mutate1\n",
+    "    nextGeneration =   list(map (mF, population))  \n",
     "    population.extend (nextGeneration)\n",
+    "    population.sort\n",
     "    return population\n",
     "            \n",
     "        "
@@ -152,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 51,
    "metadata": {
     "collapsed": true
    },
@@ -163,56 +196,11 @@
     "def createOneRandom (chromosomeSize)->list:\n",
     "    individual = []\n",
     "    for i in range (chromosomeSize):\n",
-    "        individual.append ( int (random.random() * chromosomeSize))\n",
+    "        individual.append (chromosomeSize-i)\n",
+    "    \n",
     "    return individual\n",
     "                           \n",
     "        \n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 139,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "f [[15, 7, 8, 3, 2, 15, 13, 5, 11, 15, 4, 1, 13, 19, 13, 19, 19, 4, 9, 17], [15, 7, 8, 3, 2, 15, 13, 5, 11, 15, 4, 1, 9, 19, 13, 19, 19, 4, 13, 17]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "populationSize = 1\n",
-    "chromosomeSize = 20\n",
-    "population = []\n",
-    "\n",
-    "population.append (createOneRandom (chromosomeSize))\n",
-    "for i in range (populationSize-1):\n",
-    "    population.append (mutate (population[i], 100))\n",
-    "\n",
-    "\n",
-    "print (\"f\", evolveOneGeneration (population))\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 141,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.6666666666666666\n"
-     ]
-    }
-   ],
-   "source": [
-    "print (fitness ([1,2,3,2]))\n",
-    "    \n",
     "    "
    ]
   },
@@ -224,6 +212,288 @@
    },
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 3, 4, 5, 6, 7, 8, 10, 11, 12, 13, 14, 15, 16, 1, 9] 0.8666666666666667\n",
+      "[1, 3, 4, 5, 6, 7, 8, 9, 10, 12, 13, 14, 15, 16, 2, 11] 0.8666666666666667\n",
+      "[2, 3, 4, 5, 6, 7, 8, 9, 10, 12, 13, 14, 15, 16, 11, 1] 0.8666666666666667\n",
+      "[2, 3, 4, 5, 6, 7, 8, 9, 10, 12, 13, 14, 15, 16, 1, 11] 0.8666666666666667\n",
+      "[2, 3, 4, 5, 6, 7, 8, 9, 10, 12, 13, 14, 15, 16, 1, 11] 0.8666666666666667\n",
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 13, 14, 15, 16, 11, 12] 0.8666666666666667\n",
+      "[2, 3, 4, 5, 6, 7, 8, 10, 11, 12, 13, 14, 15, 16, 1, 9] 0.8666666666666667\n",
+      "[1, 2, 3, 4, 5, 6, 7, 10, 11, 12, 13, 14, 15, 16, 8, 9] 0.8666666666666667\n",
+      "[1, 3, 4, 5, 6, 7, 8, 9, 10, 11, 13, 14, 15, 16, 2, 12] 0.8666666666666667\n",
+      "[1, 3, 4, 5, 6, 7, 8, 9, 10, 11, 13, 14, 15, 16, 2, 12] 0.8666666666666667\n",
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 13, 14, 15, 16, 11, 12] 0.8666666666666667\n",
+      "[1, 3, 4, 5, 6, 7, 8, 9, 10, 12, 13, 14, 15, 16, 11, 2] 0.8666666666666667\n",
+      "[2, 3, 4, 5, 6, 7, 8, 9, 10, 12, 13, 14, 15, 16, 11, 1] 0.8666666666666667\n",
+      "[2, 3, 4, 5, 6, 7, 8, 9, 10, 12, 13, 14, 15, 16, 11, 1] 0.8666666666666667\n",
+      "[2, 3, 4, 5, 6, 7, 8, 9, 10, 12, 13, 14, 15, 16, 11, 1] 0.8666666666666667\n",
+      "[2, 3, 4, 5, 6, 7, 8, 10, 11, 12, 13, 14, 15, 16, 1, 9] 0.8666666666666667\n",
+      "[2, 3, 4, 5, 6, 7, 8, 10, 11, 12, 13, 14, 15, 16, 1, 9] 0.8666666666666667\n",
+      "[1, 3, 4, 5, 6, 7, 8, 9, 10, 12, 13, 14, 15, 16, 2, 11] 0.8666666666666667\n",
+      "[1, 2, 3, 4, 5, 6, 7, 8, 10, 11, 12, 13, 14, 15, 9, 16] 0.8666666666666667\n",
+      "[2, 3, 4, 5, 6, 7, 8, 10, 11, 12, 13, 14, 15, 16, 1, 9] 0.8666666666666667\n",
+      "[1, 2, 3, 4, 5, 6, 7, 10, 11, 12, 13, 14, 15, 16, 8, 9] 0.8666666666666667\n",
+      "[1, 3, 4, 5, 6, 7, 8, 9, 10, 11, 13, 14, 15, 16, 12, 2] 0.8666666666666667\n",
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 13, 14, 15, 16, 11, 12] 0.8666666666666667\n",
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 13, 14, 15, 16, 11, 12] 0.8666666666666667\n",
+      "[1, 3, 4, 5, 6, 7, 8, 9, 10, 12, 13, 14, 15, 16, 2, 11] 0.8666666666666667\n",
+      "[1, 2, 3, 4, 5, 6, 7, 10, 11, 12, 13, 14, 15, 16, 8, 9] 0.8666666666666667\n",
+      "[1, 2, 3, 4, 5, 6, 7, 10, 11, 12, 13, 14, 15, 16, 8, 9] 0.8666666666666667\n",
+      "[2, 3, 4, 5, 6, 7, 8, 9, 10, 12, 13, 14, 15, 16, 11, 1] 0.8666666666666667\n",
+      "[2, 3, 4, 5, 6, 7, 8, 10, 11, 12, 13, 14, 15, 16, 1, 9] 0.8666666666666667\n",
+      "[1, 2, 3, 4, 5, 6, 7, 10, 11, 12, 13, 14, 15, 16, 8, 9] 0.8666666666666667\n",
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 14, 15, 16, 11, 12, 13] 0.8\n",
+      "[1, 3, 4, 5, 6, 7, 8, 9, 10, 12, 13, 14, 15, 2, 16, 11] 0.8\n",
+      "[2, 3, 5, 6, 7, 8, 9, 10, 12, 13, 14, 15, 16, 4, 11, 1] 0.8\n",
+      "[1, 2, 4, 5, 6, 7, 8, 9, 10, 13, 14, 15, 3, 16, 11, 12] 0.7333333333333333\n",
+      "[2, 3, 5, 6, 7, 8, 9, 10, 12, 13, 14, 15, 4, 16, 11, 1] 0.7333333333333333\n",
+      "[2, 3, 5, 6, 7, 8, 9, 10, 12, 13, 14, 4, 15, 16, 11, 1] 0.6666666666666666\n",
+      "[1, 3, 4, 5, 6, 7, 8, 9, 10, 16, 12, 13, 14, 15, 11, 2] 0.6\n",
+      "[2, 3, 4, 5, 7, 8, 10, 11, 12, 13, 6, 14, 15, 16, 1, 9] 0.6\n",
+      "[3, 4, 5, 6, 7, 8, 10, 11, 12, 2, 13, 14, 15, 16, 1, 9] 0.5333333333333333\n",
+      "[2, 3, 4, 5, 6, 7, 9, 10, 12, 8, 13, 14, 15, 16, 1, 11] 0.5333333333333333\n",
+      "[1, 3, 4, 5, 6, 7, 8, 9, 10, 2, 11, 13, 14, 15, 16, 12] 0.5333333333333333\n",
+      "[2, 3, 4, 6, 7, 8, 10, 11, 5, 12, 13, 14, 15, 16, 1, 9] 0.4666666666666667\n",
+      "[3, 4, 5, 6, 7, 8, 9, 10, 2, 12, 13, 14, 15, 16, 11, 1] 0.4666666666666667\n",
+      "[1, 2, 3, 4, 5, 6, 10, 7, 11, 12, 13, 14, 15, 16, 8, 9] 0.4\n",
+      "[1, 3, 4, 5, 6, 8, 7, 9, 10, 11, 13, 14, 15, 16, 2, 12] 0.3333333333333333\n",
+      "[1, 3, 4, 5, 6, 11, 7, 8, 9, 10, 12, 13, 14, 15, 16, 2] 0.3333333333333333\n",
+      "[1, 3, 4, 5, 6, 11, 7, 8, 9, 10, 13, 14, 15, 16, 12, 2] 0.3333333333333333\n",
+      "[2, 3, 4, 5, 1, 6, 7, 8, 10, 11, 12, 13, 14, 15, 16, 9] 0.2\n",
+      "[1, 2, 3, 13, 4, 5, 6, 7, 10, 11, 12, 14, 15, 16, 8, 9] 0.2\n",
+      "[1, 2, 4, 3, 5, 6, 7, 10, 11, 12, 13, 14, 15, 16, 8, 9] 0.13333333333333333\n",
+      "[1, 2, 16, 3, 4, 5, 6, 7, 8, 9, 10, 13, 14, 15, 11, 12] 0.13333333333333333\n",
+      "[1, 2, 8, 3, 4, 5, 6, 7, 10, 11, 12, 13, 14, 15, 16, 9] 0.13333333333333333\n",
+      "[1, 2, 14, 3, 4, 5, 6, 7, 10, 11, 12, 13, 15, 16, 8, 9] 0.13333333333333333\n",
+      "[2, 3, 13, 4, 5, 6, 7, 8, 10, 11, 12, 14, 15, 16, 1, 9] 0.13333333333333333\n",
+      "[1, 7, 3, 4, 5, 6, 8, 9, 10, 12, 13, 14, 15, 16, 2, 11] 0.06666666666666667\n",
+      "[1, 9, 2, 3, 4, 5, 6, 7, 8, 10, 11, 12, 13, 14, 15, 16] 0.06666666666666667\n",
+      "[1, 14, 2, 3, 4, 5, 6, 7, 8, 9, 10, 13, 15, 16, 11, 12] 0.06666666666666667\n",
+      "[8, 2, 3, 4, 5, 6, 7, 9, 10, 12, 13, 14, 15, 16, 1, 11] 0.0\n",
+      "[13, 2, 3, 4, 5, 6, 7, 8, 9, 10, 12, 14, 15, 16, 11, 1] 0.0\n",
+      "[5, 2, 3, 4, 6, 7, 8, 10, 11, 12, 13, 14, 15, 16, 1, 9] 0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "populationSize = 30\n",
+    "chromosomeSize = 16\n",
+    "generations = 100\n",
+    "population = []\n",
+    "\n",
+    "\n",
+    "population.append (createOneRandom (chromosomeSize))\n",
+    "for i in range (populationSize-1):\n",
+    "    population.append (mutate1 (population[i], 100))\n",
+    "\n",
+    "for generation in range (generations):\n",
+    "    newPopulation = evolveOneGeneration (population)\n",
+    " \n",
+    "    newPopulation.sort (key = lambda individual: fitness (individual), reverse=True)\n",
+    "\n",
+    "    population = newPopulation[:populationSize]\n",
+    "    \n",
+    "for individual in newPopulation:\n",
+    "    print (individual, fitness (individual))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "ind = {\"C\":[1,2], \"F\": 0.1}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 4]"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m = [2,3,4]\n",
+    "m\n",
+    "del (m[1])\n",
+    "m\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "m.insert(2,1)\n",
+    "m"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "m.insert(2,1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 4, 1]"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "m.insert(99,1)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 4, 1, 1]"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = Individual()\n",
+    "i\n",
+    "i.score=2\n",
+    "i\n",
+    "print (i.score)\n",
+    "i.fitness = 3\n",
+    "print (i.fitness)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "i.z =2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (i.z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'plotly'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-65-c2bcad6e252a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mplotly\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplotly\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mpy\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mplotly\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgraph_objs\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m data = [Bar(x=df.School,\n\u001b[1;32m      5\u001b[0m             y=df.gap)]\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'plotly'"
+     ]
+    }
+   ],
+   "source": [
+    "import plotly.plotly as py\n",
+    "from plotly.graph_objs import *\n",
+    "\n",
+    "data = [Bar(x=df.School,\n",
+    "            y=df.gap)]\n",
+    "\n",
+    "py.iplot(data, filename='jupyter/basic_bar')\n"
+   ]
   },
   {
    "cell_type": "code",
