--- a/go-tsp.ipynb
+++ b/go-tsp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 187,
    "metadata": {
     "collapsed": true
    },
@@ -20,48 +20,58 @@
     "            self.y = int(random.random() * 1000)\n",
     "                \n",
     "    def distanceTo(self, other) -> float:\n",
-    "      xDistance = abs(self.getX() - other.getX())\n",
-    "      yDistance = abs(self.getY() - other.getY())\n",
-    "      distance = math.sqrt( (xDistance*xDistance) + (yDistance*yDistance) )\n",
+    "      xDistance = abs(self.x - other.x)\n",
+    "      yDistance = abs(self.y - other.y)\n",
+    "      distance = math.sqrt( (xDistance*xDistance) + (yDistance*yDistance))\n",
     "      return distance\n",
+    "    \n",
+    "    def __repr__(self):        \n",
+    "        string = \"(\" + str(self.x) + \",\" + str(self.y)+ \")\"       \n",
+    "        return string\n",
+    "        \n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
+   "execution_count": 188,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "class Individual:\n",
-    "    def __init__(self, chromosome= []):\n",
-    "        self.chromosome = chromosome\n",
+    "    def __init__(self):\n",
+    "        self.chromosome = []\n",
     "        self.fitness = None\n",
     "    \n",
     "    def add (self, city: City):\n",
     "        self.chromosome.append (city)\n",
     "        \n",
-    "    def clone (self)->Individual:\n",
-    "        mutant = Indiviual (self.chromosome)\n",
-    "        return mutant\n",
+    "    def cloneInto (self, mutant):\n",
+    "        for i in range(0, len (self.chromosome)):\n",
+    "            mutant.add (self.chromosome[i])\n",
     "        \n",
     "    def mutate (self, mutant, times=1):\n",
     "        size = len (self.chromosome)\n",
     "        for i in range (times):       \n",
     "            ith = int (random.random () * size)\n",
     "            jth = int (random.random () * size)\n",
-    "            print (ith, \" \", jth)\n",
-    "            tmp = mutant.chromosome[ith]\n",
-    "            mutant.chromosome[ith] = mutant.chromosome[jth]\n",
-    "            mutant.chromosome[jth] = tmp\n",
-    "            print (\"m\", mutant)\n",
+    "            a = mutant.chromosome[ith]\n",
+    "            b = mutant.chromosome[jth]\n",
+    "            mutant.chromosome[ith] = b\n",
+    "            mutant.chromosome[jth] = a\n",
     "        \n",
     "    #def crossover (self, other : Individual)->Individual:\n",
     "        \n",
     "    def calcFitness (self)->float:\n",
-    "        length = ((lambda i1, i2: i1.distanceTo(i2)), [1, 2, 3, 4])\n",
+    "        length = 0\n",
+    "        for i in range (len (self.chromosome) -1):\n",
+    "            length += self.chromosome[i].distanceTo (self.chromosome[i+1])\n",
     "        return length\n",
-    "        \n",
+    "     \n",
+    "    def getFitness (self):\n",
+    "        return self.fitness\n",
     "    \n",
     "    def __repr__(self):\n",
     "        braket = \"<\"\n",
@@ -75,33 +85,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 189,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0   1\n",
-      "m <(100,200)|(10,20)|>\n",
-      "<(100,200)|(10,20)|>\n",
-      "<(100,200)|(10,20)|>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "c1 = City(10,20)\n",
-    "c2 = City(100, 200)\n",
-    "i1 = Individual ()\n",
-    "i1.add(c1)\n",
-    "i1.add(c2)\n",
-    "mutant = Individual ()\n",
-    "i1.mutate (mutant)\n",
-    "print (i1)\n",
+    "class Population (object) :\n",
+    "    def __init__(self):\n",
+    "        self.population = []\n",
+    "    \n",
+    "    def add (self, individual):\n",
+    "        self.population.append (individual)\n",
+    "    \n",
+    "    def detAllFitness (self):\n",
+    "        for i in range(len (self.population)):\n",
+    "            f = self.population[i].calcFitness ()\n",
+    "            self.population[i].fitness = f\n",
     "\n",
-    "print (mutant)\n",
+    "    def rank (self):\n",
+    "        self.sort (key = lambda individual: individual.getFitness(), reverse=True)\n",
     "\n",
-    "\n"
+    "        \n",
+    "    def __repr__(self):\n",
+    "        braket = \"<\"\n",
+    "        for i in range(0, len (self.population)):\n",
+    "            braket += str(self.population[i].getFitness()) + \" \"\n",
+    "        braket += \">\" \n",
+    "        \n",
+    "        return braket\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 190,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "class GO:\n",
+    "    def __init__(self, I):\n",
+    "      self.population = []\n",
+    "      self.I = I\n",
+    "      self.mutationRate = 1.0\n",
+    "      self.populationSize = 5\n",
+    "      self.elitism = True\n",
+    "    \n",
+    "    def evolve (self, generations, base):\n",
+    "        self.population.append (base)\n",
+    "        for i in range (self.populationSize - 1):\n",
+    "            mutant = self.I ()\n",
+    "            self.I.cloneInto ()\n",
+    "            print (mutant)\n",
+    "            self.population[0].cloneInto(mutant)\n",
+    "            self.population[0].mutate (mutant)\n",
+    "            self.population.append (mutant)\n",
+    "        \n",
+    "        "
    ]
   },
   {
@@ -115,12 +155,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 191,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "d\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'Population' object has no attribute 'sort'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-191-d9f5e39cbe76>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0mpopulation\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mi2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0mpopulation\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdetAllFitness\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 19\u001b[0;31m \u001b[0mpopulation\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrank\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     20\u001b[0m \u001b[0mprint\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mpopulation\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-189-297380cb116a>\u001b[0m in \u001b[0;36mrank\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mrank\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 14\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msort\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mlambda\u001b[0m \u001b[0mindividual\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mindividual\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgetFitness\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreverse\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     15\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'Population' object has no attribute 'sort'"
+     ]
+    }
+   ],
+   "source": [
+    "c1 = City(0,100)\n",
+    "c2 = City(100, 100)\n",
+    "c3 = City (200, 100)\n",
+    "c4 = City (300, 100)\n",
+    "i1 = Individual ()\n",
+    "i1.add(c1)\n",
+    "i1.add(c2)\n",
+    "i1.add(c3)\n",
+    "i1.calcFitness()\n",
+    "print (\"d\")\n",
+    "i2 = Individual ()\n",
+    "i2.add(c2)\n",
+    "i2.add(c1)\n",
+    "i2.add(c3)\n",
+    "population = Population ()\n",
+    "population.add (i1)\n",
+    "population.add (i2)\n",
+    "population.detAllFitness ()\n",
+    "population.rank()\n",
+    "print (population)\n",
+    "\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
